--- a/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
+++ b/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
@@ -2,16 +2,16 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Eshopworld.Tests.Core.Analyzers</id>
-    <version>1.0.3</version>
+    <version>1.0.5</version>
     <title>Eshopworld.Tests.Core.Analyzers</title>
-    <authors>David Rodrigues</authors>
+    <authors>David Rodrigues, Oisin Haken</authors>
     <owners>eShopWorld</owners>
     <projectUrl>https://github.com/eShopWorld/tests-core</projectUrl>
     <licenseUrl>https://github.com/eShopWorld/tests-core/blob/master/LICENSE</licenseUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Common entry point for any unit test assembly in eShopWorld.</description>
-    <releaseNotes>initial release of the package.</releaseNotes>
+    <releaseNotes>injected Level3 attribute to analyzer</releaseNotes>
     <copyright>eShopWorld</copyright>
     <tags>eshopworld, analyzers, unit test, unittest, test</tags>
     <frameworkAssemblies>
