--- a/src/Eshopworld.Tests.Core.Analyzers.Vsix/packages.config
+++ b/src/Eshopworld.Tests.Core.Analyzers.Vsix/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.7.7" targetFramework="net462" />
-  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.7.18" targetFramework="net462" />
+  <package id="Microsoft.CodeAnalysis.BannedApiAnalyzers" version="2.9.8" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="16.3.14" targetFramework="net462" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="16.3.52" targetFramework="net462" />
 </packages>
