--- a/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
+++ b/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <IsPackable>true</IsPackable>
 
-    <Version>2.0.2</Version>
+    <Version>2.0.3</Version>
     <PackageReleaseNotes>Upgrade to netstandard2.1</PackageReleaseNotes>
 
     <PackageId>Eshopworld.Tests.Core</PackageId>
@@ -19,7 +19,7 @@
     <AssemblyName>Eshopworld.Tests.Core</AssemblyName>
     <RootNamespace>Eshopworld.Tests.Core</RootNamespace>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Added support for IntegrationHealthCheck trait attribute</PackageReleaseNotes>
+    <PackageReleaseNotes>Updated to use latest analyzer package</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
