--- a/src/Eshopworld.Tests.Core.Analyzers/packages.config
+++ b/src/Eshopworld.Tests.Core.Analyzers/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="portable45-net45+win8" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.3.2" targetFramework="portable45-net45+win8" />
@@ -9,12 +9,12 @@
   <package id="NuGet.CommandLine" version="3.5.0" targetFramework="portable45-net45+win8" developmentDependency="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="portable45-net45+win8" />
-  <package id="System.Composition" version="1.0.31" targetFramework="portable45-net45+win8" />
-  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="portable45-net45+win8" />
-  <package id="System.Composition.Convention" version="1.0.31" targetFramework="portable45-net45+win8" />
-  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="portable45-net45+win8" />
-  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="portable45-net45+win8" />
-  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="portable45-net45+win8" />
+  <package id="System.Composition" version="1.4.1" targetFramework="portable45-net45+win8" />
+  <package id="System.Composition.AttributedModel" version="1.4.1" targetFramework="portable45-net45+win8" />
+  <package id="System.Composition.Convention" version="1.4.1" targetFramework="portable45-net45+win8" />
+  <package id="System.Composition.Hosting" version="1.4.1" targetFramework="portable45-net45+win8" />
+  <package id="System.Composition.Runtime" version="1.4.1" targetFramework="portable45-net45+win8" />
+  <package id="System.Composition.TypedParts" version="1.4.1" targetFramework="portable45-net45+win8" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="System.Globalization" version="4.3.0" targetFramework="portable45-net45+win8" />
