--- a/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
+++ b/src/Eshopworld.Tests.Core.Analyzers/Eshopworld.Tests.Core.Analyzers.nuspec
@@ -11,7 +11,7 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Common entry point for any unit test assembly in eShopWorld.</description>
-    <releaseNotes>Added IntegrationHealthCheck trait attribute support</releaseNotes>
+    <releaseNotes>Updated dependent packages</releaseNotes>
     <copyright>eShopWorld</copyright>
     <tags>eshopworld, analyzers, unit test, unittest, test</tags>
     <frameworkAssemblies>
