--- a/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
+++ b/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <IsPackable>true</IsPackable>
 
-    <Version>2.0.7</Version>
-    <PackageReleaseNotes>Update Eshopworld.Tests.Core.Analyzers.</PackageReleaseNotes>
+    <Version>2.0.8</Version>
+    <PackageReleaseNotes>Add BigBrother Extensions</PackageReleaseNotes>
     <PackageIcon>icon.png</PackageIcon>
     <PackageId>Eshopworld.Tests.Core</PackageId>
     <Authors>David Rodrigues, Oisin Haken</Authors>
@@ -26,6 +26,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Eshopworld.Core" Version="4.2.1" />
     <PackageReference Include="Eshopworld.Tests.Core.Analyzers" Version="1.0.11" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
