--- a/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
+++ b/src/Eshopworld.Tests.Core/Eshopworld.Tests.Core.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <IsPackable>true</IsPackable>
 
-    <Version>2.0.8</Version>
-    <PackageReleaseNotes>Add BigBrother Extensions</PackageReleaseNotes>
+    <Version>2.0.9</Version>
+    <PackageReleaseNotes>Add IValidator Extensions</PackageReleaseNotes>
     <PackageIcon>icon.png</PackageIcon>
     <PackageId>Eshopworld.Tests.Core</PackageId>
     <Authors>David Rodrigues, Oisin Haken</Authors>
@@ -29,6 +29,7 @@
     <PackageReference Include="Eshopworld.Core" Version="4.2.1" />
     <PackageReference Include="Eshopworld.Tests.Core.Analyzers" Version="1.0.11" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="FluentValidation" Version="9.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="xunit" Version="2.4.1" />
